# nicklinref_rust

./: .gitignore  Cargo.toml  README.md  changelog.md  config.json  package-for-release.ps1  readme.md
.github/workflows/: rust.yml
__static_http/: Fetch_Queue.js  binary_encode_batch_request.js  index.html  main.js  secrets.json.example  test-header-x-response-id.js  test_out_of_order_requests.js
readme_extras/: process_flowchart.md
src/: basic_error.rs  config_loader.rs  decode_query_parameters.rs  echo_header.rs  echo_x_request_id.rs  esri_serde.rs  main.rs  settings.rs  update_data.rs  wait_for_n_seconds.rs
src/data/: download_or_read_from_file.rs  esri_json.rs  esri_serde.rs  index.rs  indexed_data.rs  mod.rs
src/data/cached/: attributes.rs  cwy.rs  feature.rs  layer.rs  mod.rs
src/data/indexed/: indexed_data.rs  mod.rs  road_data_by_cwy.rs  test_data.rs
src/filters/: custom_rejection_handler.rs  echo_x_request_id.rs  get_combined_filters.rs  lines.rs  lines_batch.rs  load_data_and_combine_filters.rs  mod.rs  points.rs  unified_batch.rs  with_shared_data.rs
src/filters/geoprocessing/: get_linestring.rs  get_linestring_m.rs  get_points.rs  mod.rs
src/filters/query_parameters/: mod.rs  output_format.rs  query_parameters_batch.rs  query_parameters_line.rs  query_parameters_point.rs  query_parameters_unified.rs  requested_cwy.rs
src/geoprocessing/: get_linestring.rs  get_linestring_m.rs  get_points.rs  mod.rs
src/helpers/: echo_x_request_id.rs  error_with_dynamic_message.rs  error_with_message.rs  error_with_static_message.rs  mean_angle.rs  mod.rs  serde_helpers.rs  unit_conversion.rs
src/query_parameters/: output_format.rs  query_parameters_batch.rs  query_parameters_line.rs  query_parameters_point.rs  requested_cwy.rs
src/routes/: echo_x_request_id.rs  lines.rs  lines_batch.rs  load_data_and_combine_filters.rs  load_data_and_get_combined_routes.rs  mod.rs  points.rs
src/routes/geoprocessing/: get_linestring.rs  get_linestring_m.rs  get_points.rs
src/routes/query_parameters/: mod.rs  output_format.rs  query_parameters_batch.rs  query_parameters_line.rs  query_parameters_point.rs  requested_cwy.rs
src/settings/: mod.rs  settings.rs
tests/: manual tests.ipynb
