[package]
name = "nicklinref"
version = "0.1.0"
authors = ["thehappycheese <the.nicholas.archer@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/thehappycheese/nicklinref_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.4.0", features=["macros","rt-multi-thread"]}
warp = "0.3"
config = "0.10"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
nickslinetoolsrust = {git="https://github.com/thehappycheese/nicks_line_tools_rust.git", branch="main"}
lz-fear = "0.1.1"
